// Copyright (c) 2020 Temporal Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package replication;

option go_package = "github.com/temporalio/temporal/.gen/proto/archiver";

import "enums/enums.proto";
import "common/common.proto";
import "common/history.proto";


message HistoryBlobHeader {
    string Namespace = 1;
    string NamespaceId = 2;
    string WorkflowId = 3;
    string RunId = 4;
    bool IsLast = 5;
    int64 FirstFailoverVersion = 6;
    int64 LastFailoverVersion = 7;
    int64 FirstEventId = 8;
    int64 LastEventId = 9;
    int64 EventCount = 10;

}

message HistoryBlob  {
    HistoryBlobHeader Header = 1;
    repeated common.History Body = 2;
}

// ArchiveVisibilityRequest is request to Archive single workflow visibility record
message ArchiveVisibilityRequest {
    string NamespaceId = 1;
    string Namespace = 2;
    string WorkflowId = 3;
    string RunId = 4;
    string WorkflowTypeName = 5;
    int64 StartTimestamp = 6;
    int64 ExecutionTimestamp = 7;
    int64 CloseTimestamp = 8;
    enums.WorkflowExecutionCloseStatus CloseStatus = 9;
    int64 HistoryLength = 10;
    common.Memo Memo = 11;
    map<string, string> SearchAttributes = 12;
    string HistoryArchivalURI = 13;
}